MINIFICPP-2087 Fix deadlock when fetching initial flow from C2 url

Closes #1546
Signed-off-by: Marton Szasz <szaszm@apache.org>