docker/test/integration/cluster/ContainerStore.py
@@ -151,6 +151,9 @@ class ContainerStore:
     def enable_c2_with_ssl_in_minifi(self):
         self.minifi_options.enable_c2_with_ssl = True
 
+    def fetch_flow_config_from_c2_url_in_minifi(self):
+        self.minifi_options.use_flow_config_from_url = True
+
     def enable_prometheus_in_minifi(self):
         self.minifi_options.enable_prometheus = True
 
